fix layout issues in register page

--- a/src/index.css
+++ b/src/index.css
@@ -111,3 +111,18 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  .autofill\:bg-transparent:-webkit-autofill {
+    background-color: transparent !important;
+    -webkit-box-shadow: 0 0 0px 1000px white inset !important;
+    box-shadow: 0 0 0px 1000px white inset !important;
+  }
+}
+input:-webkit-autofill,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:hover {
+  background-color: transparent !important;
+  -webkit-box-shadow: 0 0 0px 1000px white inset !important;
+  box-shadow: 0 0 0px 1000px white inset !important;
+}
